# mytodolist

./: Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
accounts/: urls.py  views.py
core/: settings.py  urls.py
templates/: home.html  shared.html
templates/todos/: create.html  delete.html  list.html  update.html
templates/users/: login.html  register.html
todos/: forms.py  models.py  urls.py  views.py
todos/migrations/: 0001_initial.py
